# CHIP-8_Emulator

./: CMakeLists.txt  LICENSE  main.cpp
Debug/: CHIP-8_Emulator  CMakeCache.txt  Makefile  cmake_install.cmake
Debug/.cmake/api/v1/reply/: codemodel-v2-8836eea8b247a390528a.json  index-2024-06-23T03-19-35-0697.json  target-CHIP-8_Emulator-Debug-57215afae496d052f589.json
Debug/src/: CHIP-8_Emulator  Makefile  cmake_install.cmake
src/: chip8.cpp  chip8.h  font.cpp  font.h  window.cpp  window.h
